<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_Mode" Id="{d05b53fd-7aad-496e-bd2b-2db4a2d2d066}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Mode :
(
	Auto,
	Manual,
	Off
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>